<resources>
    <string name="app_name">Asta</string>

    <string name="start_asta">아스타에서 경매를 시작하세요.</string>
    <string name="start">시작하기</string>
    <string name="login">로그인</string>
    <string name="have_account">이미 계정이 있나요?</string>
    <string name="certification_phone_number">휴대폰번호 인증</string>
    <string name="please_certification_phone_number">휴대폰 번호를 인증해 주세요.</string>
    <string name="register_with_phone_number">아스타는 휴대폰 번호로 가입해요.</string>
    <string name="input_phone_number">휴대폰 번호를 입력해주세요.</string>
    <string name="input_product_name">상품명을 입력해주세요.</string>
    <string name="input_certification_number">인증 번호를 입력해주세요.</string>
    <string name="get_certification_number">인증문자 받기</string>
    <string name="confirm_certification_number">인증번호 확인</string>
    <string name="error_phone_number">정확한 휴대폰 번호를 입력해 주세요.</string>
    <string name="error_certification_number">인증번호가 잘못되었습니다.</string>
    <string name="bidder">입찰자</string>
    <string name="bidding">입찰하기</string>
    <string name="rating">평가하기</string>
    <string name="bid_view_more">입찰내역 더 보기</string>
    <string name="appraisal_view_more">평가내역 더 보기</string>
    <string name="info_bid_1">ㆍ희망가와 같거나 더 높은 금액으로 입찰 시 바로 낙찰됩니다.</string>
    <string name="info_bid_2">ㆍ판매자의 사정으로 경매가 철회될 수 있습니다.</string>
    <string name="info_bid_3">ㆍ입찰 후에는 취소가 불가능 합니다.</string>
    <string name="move_comment">이 상품에 대한 자유로운 의견을 나누세요.</string>
    <string name="auction">경매</string>
    <string name="input_comment">댓글을 입력해 주세요.</string>
    <string name="history_bid">%1$s원을 입찰하였습니다.</string>
    <string name="history_appraisal">%1$s원 으로 평가하였습니다.</string>
    <string name="proceeding_auction">진행중인 경매</string>
    <string name="completed_auction">완료된 경매</string>
    <string name="please_rate_products">아스타 회원들의 상품을 평가해 주세요.</string>
    <string name="appraisal_price">평가금액</string>
    <string name="input_appraisal_price">평가금액 입력</string>
    <string name="please_input_appraisal_price">평가 할 금액을 입력해 주세요.</string>
    <string name="estimated_price">소유자 예상가</string>
    <string name="average_appraisal_price">평균 평가금액</string>
    <string name="certified_member">아스타 인증회원</string>
    <string name="evaluation_received">받은 평가</string>
    <string name="select_category">카테고리 선택</string>
    <string name="select_condition">상품 상태 선택</string>
    <string name="title">제목</string>
    <string name="product_condition">상품 상태</string>
    <string name="trade">거래 방법</string>
    <string name="product_information">상품 상세정보</string>
    <string name="price_hope">희망 가격</string>
    <string name="price_start">시작 가격</string>
    <string name="price_increase">호가 (증액)</string>
    <string name="deadline_date">경매 종료일</string>
    <string name="deadline_time">경매 마감시간</string>
    <string name="price_info_start_1">ㆍ시작가격 부터 입찰이 시작됩니다.</string>
    <string name="price_info_hope_1">ㆍ희망가격 이상으로 입찰 될 경우 바로 낙찰됩니다.</string>
    <string name="price_info_increase_1">ㆍ입찰 시 올라가는 금액입니다.</string>
    <string name="trade_select">거래 방법 선택</string>
    <string name="select_auction_product">경매 상품 선택</string>
    <string name="guide">안내</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="check_register_auction">경매를 등록하시겠습니까?</string>
    <string name="success_register_auction">경매등록이 완료되었습니다.</string>
    <string name="empty_search">검색 결과가 없습니다.</string>

    <string name="home">실시간 경매</string>
    <string name="my_page">마이페이지</string>
    <string name="ranking">랭킹</string>
    <string name="appraisal">감정평가</string>
    <string name="bid">응찰 이력</string>
    <string name="search">검색</string>
    <string name="settings">설정</string>
    <string name="category">카테고리</string>
    <string name="wish_list">위시 리스트</string>
    <string name="comment">댓글</string>
    <string name="profile">프로필</string>
    <string name="history_auction">경매 내역</string>
    <string name="register_appraisal">감정평가 등록하기</string>
    <string name="register_auction">경매 등록하기</string>
    <string name="details_bid">입찰 내역</string>
    <string name="details_appraisal">감정평가 내역</string>
    <string name="register_auction_label">경매 등록</string>
    <string name="history_sale">판매 내역</string>
    <string name="history_success_bid">낙찰 내역</string>
    <string name="community">커뮤니티</string>
    <string name="comment_by_me">내가 작성한 댓글</string>
    <string name="appraisal_by_me">내가 평가한 상품</string>
    <string name="please_input_price">금액을 입력해 주세요.</string>
    <string name="deadline">경매 종료일</string>
    <string name="action_withdraw_message">판매자의 사정에 의해 경매가 철회되었습니다.</string>
    <string name="action_fail_message">아쉽게도 패찰하였습니다.</string>
    <string name="action_success_message">이 경매 상품에 낙찰되었습니다.</string>
    <string name="action_end_message">경매가 종료되었습니다.</string>

    // 카테고리
    <string name="digital">디지털 기기</string>
    <string name="home_appliances">홈 / 생활가전</string>
    <string name="furniture">가구 / 인테리어</string>
    <string name="car">자동차 / 이동수단</string>
    <string name="hobby">취미</string>
    <string name="sports">스포츠</string>
    <string name="fashion">패션</string>
    <string name="food">식품</string>
    <string name="scarcity">희소가치</string>

    // 제품상태
    <string name="condition_new">새상품</string>
    <string name="condition_best">상태 최상</string>
    <string name="condition_good">상태 양호</string>
    <string name="condition_usually">상태 보통</string>
    <string name="condition_limited_edition">리미티드 에디션</string>
    <string name="condition_collectible">소장가치</string>

    // 제품상태 설명
    <string name="condition_info_new">미사용 및 미개봉인 상태</string>
    <string name="condition_info_best">사용은 하였지만 새 제품과 다름없는 상태</string>
    <string name="condition_info_good">사용감이 미세하게 있는 상태</string>
    <string name="condition_info_usually">사용감이 있는 상태</string>
    <string name="condition_info_limited_edition">한정판 또는 구할 수 없는 상품</string>
    <string name="condition_info_collectible">희소하거나 소장가치가 있는 상품</string>

    // 거래 방법
    <string name="trade_parcel">택배</string>
    <string name="trade_direct_transaction">직거래</string>
    <string name="trade_negotiable">택배 | 직거래</string>

    // 경매 상태
    <string name="auction_bidding">입찰중</string>
    <string name="auction_withdraw">철회됨</string>
    <string name="auction_fail">패찰</string>
    <string name="auction_success">낙찰</string>
    <string name="auction_end">경매종료</string>

</resources>