<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.hampson.asta.presentation.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_fragment_home_start_to_fragment_detail_auction"
            app:destination="@id/fragment_detail_auction"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/fragment_appraisal"
        android:name="com.hampson.asta.presentation.appraisal.AppraisalFragment"
        android:label="@string/appraisal"
        tools:layout="@layout/fragment_appraisal" />

    <fragment
        android:id="@+id/fragment_ranking"
        android:name="com.hampson.asta.presentation.ranking.RankingFragment"
        android:label="@string/ranking"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/fragment_bid"
        android:name="com.hampson.asta.presentation.bid.BidFragment"
        android:label="@string/bid"
        tools:layout="@layout/fragment_bid" />

    <fragment
        android:id="@+id/fragment_my_page"
        android:name="com.hampson.asta.presentation.my_page.MyPageFragment"
        android:label="@string/my_page"
        tools:layout="@layout/fragment_my_page" />

    <fragment
        android:id="@+id/fragment_category"
        android:name="com.hampson.asta.presentation.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/fragment_detail_auction"
        android:name="com.hampson.asta.presentation.detail_auction.DetailAuctionFragment"
        tools:layout="@layout/fragment_detail_auction" />
</navigation>