<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="32dp"
    android:paddingEnd="16dp"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/text_view_certification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_certification_phone_number"
        android:textColor="@color/color_444444"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_with_phone_number"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_certification" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_phone_number"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/text_view_register">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_certification_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_certification_number"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_certification_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_get_certification"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/get_certification_number"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_phone_number" />

    <Button
        android:id="@+id/button_confirm_certification"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_certification_number"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_certification_number" />
</androidx.constraintlayout.widget.ConstraintLayout>