<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="32dp"
    android:paddingEnd="16dp"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="입찰금액 설정"
        android:textColor="@color/app_red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_info_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/info_bid_1"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <TextView
        android:id="@+id/text_view_info_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/info_bid_2"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_info_1" />

    <TextView
        android:id="@+id/text_view_info_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/info_bid_3"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_info_2" />

    <TextView
        android:id="@+id/text_view_increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="호가(증액)"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_info_3" />

    <TextView
        android:id="@+id/text_view_increase_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="10,000원"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/text_view_increase"
        app:layout_constraintTop_toBottomOf="@+id/text_view_info_3" />

    <TextView
        android:id="@+id/text_view_bid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="입찰 금액"
        android:textColor="@color/color_444444"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_increase_price" />

    <TextView
        android:id="@+id/text_view_bid_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="260,000원"
        android:textColor="@color/app_red"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_bid" />

    <ImageView
        android:id="@+id/image_view_minus"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_remove_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_bid_price"
        app:layout_constraintEnd_toStartOf="@+id/text_view_bid_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_view_bid_price" />

    <ImageView
        android:id="@+id/image_view_plus"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_bid_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_bid_price"
        app:layout_constraintTop_toTopOf="@id/text_view_bid_price" />

    <Button
        android:id="@+id/button_bid"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_6_background_ff5a5a"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/bidding"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_view_bid_price" />
</androidx.constraintlayout.widget.ConstraintLayout>